force-app/main/default/objects/Revenue_Attribution_Policy__mdt/Revenue_Attribution_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Revenue Attribution Policy</label>
    <pluralLabel>Revenue Attribution Policies</pluralLabel>
</CustomObject>