force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Allow_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Override__c</fullName>
    <label>Allow Override</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>