force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Attribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Type__c</fullName>
    <label>Attribution Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>