force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Method__c</fullName>
    <label>Calculation Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>