force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Feature_Flag__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag__c</fullName>
    <label>Feature Flag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>