force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Maximum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Percentage__c</fullName>
    <label>Maximum Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>