force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Override_Authority__c.field-meta.xml
<CustomField>
    <fullName>Override_Authority__c</fullName>
    <label>Override Authority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>