force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>