force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>