force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Require_Active_Participant__c.field-meta.xml
<CustomField>
    <fullName>Require_Active_Participant__c</fullName>
    <label>Require Active Participant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>