force-app/main/default/objects/Revenue_Attribution_Policy__mdt/fields/Require_Implementation_Completion__c.field-meta.xml
<CustomField>
    <fullName>Require_Implementation_Completion__c</fullName>
    <label>Require Implementation Completion</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>